--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <h2>About Us</h2>
         <p>This is a simple HTML website.</p>
         <h2>Contact</h2>
-        <p>You can contact us at <a href="mailto:your@email.com">your@email.com</a>.</p>
+        <p>You can contact us at <a href="mailto:me@sid.nz">your@email.com</a>.</p>
+        
+        <!-- Embed Flickr Gallery -->
+        <iframe src="https://www.flickr.com/photos/197609287@N05/" frameborder="0" scrolling="no" style="border:none; width:100%; height:400px;"></iframe>
     </div>
 </body>
 </html>
