--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         
     </header>
     <div class="container">
+        <!--
         <!h2>About Us</h2>
         <!p>This is a simple HTML website.</p>
         <!h2>Contact</h2>
         <!p>You can contact me at <a href="mailto:me@sid.nz">me@sid.nz</a>.</p>
-        
+        -->
         <!-- Flickr Embed -->
-        <a data-flickr-embed="true" href="https://www.flickr.com/photos/197609287@N05" title=""><img src="https://live.staticflickr.com/65535/53241906431_f5f6635cc7_z.jpg" width="1200" height="1600" alt=""/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+        <a data-flickr-embed="true" href="https://www.flickr.com/photos/197609287@N05" title=""><img class="flickr-embed" src="https://live.staticflickr.com/65535/53241906431_f5f6635cc7_z.jpg" alt=""/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
     </div>
 </body>
 </html>
