--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Basic Website</title>
+    <title>My Gallery</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* Add your CSS styles here */
         body {
