--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <!-- Add links to your About Me page -->
         <h4><a href="about.html">About Me</a></h4>
         
-        
+        <div id="flickrEmbed">
         <!-- Flickr Embed -->
-        <a data-flickr-embed="true" href="https://www.flickr.com/photos/197609287@N05" title=""><img class="flickr-embed" src="https://live.staticflickr.com/65535/53241906431_f5f6635cc7_z.jpg" alt=""/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+        <a data-flickr-embed="true" href="https://www.flickr.com/photos/197609287@N05" title=""><img class="flickr-embed" src="https://live.staticflickr.com/65535/53241906431_f5f6635cc7_z.jpg" width= "100%" alt=""/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+    </div>
     </div>
 </body>
 </html>
